<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="30dp"
>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.suryaprakash.twoactivities.MainActivity">

    <EditText
        android:id="@+id/text_input"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:layout_marginTop="275dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Name_String"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_prompt"
        android:inputType="number"
        android:maxLength="10"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
         />
    <EditText
        android:id="@+id/password"
        android:hint="@string/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:maxLength="10"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/dob"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </CalendarView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/mail_address"/>
    </LinearLayout>

    <Button
        android:layout_weight="4"
        android:id="@+id/next_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity2_button_text"
        android:textStyle="bold"
        android:background="@color/black"
        android:textColor="@color/white"
        />

</LinearLayout>

</ScrollView>
